# Muziku

./: .gitignore
Plan/: AI-music-tools.md  README.md  plan-business.md  plan-startup.md  plan-technical.md  plan.md
src/VideoMerge/: VideoMerge.md  main.py  pyproject.toml
src/VideoMerge/Plan/: FFmpeg-effects.md  Soluations.md
src/VideoMerge/config/: settings.toml
src/VideoMerge/video_merge/: __init__.py  __main__.py  cli.py
src/VideoMerge/video_merge/application/: __init__.py  workflow.py
src/VideoMerge/video_merge/domain/: __init__.py  models.py
src/VideoMerge/video_merge/infrastructure/: __init__.py  chapter_writer.py  ffmpeg_runner.py  file_scanner.py  manifest_writer.py
src/suno-automation/: main.py  pyproject.toml  suno-automation.md  suno-operation.md
src/suno-automation/config/: settings.toml
src/suno-automation/config/PromptPool/: prompt_elements_cafe.json  prompt_elements_night.json  prompt_elements_rain.json  prompt_elements_sleep_relax.json  prompt_elements_study_focus.json  prompt_elements_work_home.json
src/suno-automation/src/: downloader.py  prompt_builder.py  suno_client.py  workflow_hook.py
src/suno-automation/suno_automation/: __init__.py  __main__.py  cli.py  downloader.py  prompt_builder.py  suno_client.py  workflow_hook.py
