[project]
name = "video-merge"
version = "0.1.0"
description = "以 Python 與 ffmpeg 建立長影片的 CLI 工具"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
video-merge = "video_merge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_merge"]
