[project]
name = "suno-automation"
version = "0.1.0"
description = "Suno AI 音樂自動化生成工具，使用 Playwright 瀏覽器自動化"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "tomllib>=2.0.0; python_version < '3.11'",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
suno = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
